<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Logo y nombre de la aplicación en la parte superior -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@color/primary"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_xhat_logo"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- RecyclerView para mostrar los canales -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChannels"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/topBar"
        android:layout_above="@+id/btnCreateChannel"
        android:padding="8dp" />

    <!-- Botón para crear un nuevo canal -->
    <Button
        android:id="@+id/btnCreateChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_channel"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>
